Switch SourceReference to use URIs
Do not expose ImmutableList, just a List and use unmodifiable lists
internally.

Also store URIs and not URLs, as that is what the source of truth is: at
the end of the day, we do not know if the URI is a valid URL, nor do we
know if the system can handle URI's scheme.

Change-Id: Ia1672b1587025fb2f5a0b52802151f51ab1741bc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>