@@ -11,9 +11,9 @@ import static java.util.Objects.requireNonNull;
 
 import com.google.common.annotations.Beta;
 import com.google.common.base.MoreObjects.ToStringHelper;
-import com.google.common.collect.ImmutableList;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collection;
+import java.util.List;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.opendaylight.yangtools.concepts.AbstractSimpleIdentifiable;
 import org.opendaylight.yangtools.concepts.Immutable;
@@ -27,30 +27,30 @@ import org.opendaylight.yangtools.yang.model.api.source.SourceIdentifier;
 public final class SourceReference extends AbstractSimpleIdentifiable<SourceIdentifier> implements Immutable {
     // List vs. Set vs. Collection here is a class design decision based on use. We expect these objects to be used
     // frequently, but for a short time. Locations may end up being ignored by SchemaContextResolver, hence it does not
-    // make sense to ensure a Set here just to de-duplicate URLs.
+    // make sense to ensure a Set here just to de-duplicate URIs.
     //
     // This transports their iteration order, hence we accept Collection construction argument, but keep the immutable
     // copy as a List
-    private final ImmutableList<URL> locations;
+    private final List<URI> locations;
 
-    private SourceReference(final SourceIdentifier identifier, final ImmutableList<URL> locations) {
+    private SourceReference(final SourceIdentifier identifier, final List<URI> locations) {
         super(identifier);
         this.locations = requireNonNull(locations);
     }
 
     public static SourceReference of(final SourceIdentifier identifier) {
-        return new SourceReference(identifier, ImmutableList.of());
+        return new SourceReference(identifier, List.of());
     }
 
-    public static SourceReference of(final SourceIdentifier identifier, final URL location) {
-        return new SourceReference(identifier, ImmutableList.of(location));
+    public static SourceReference of(final SourceIdentifier identifier, final URI location) {
+        return new SourceReference(identifier, List.of(location));
     }
 
-    public static SourceReference of(final SourceIdentifier identifier, final Collection<URL> locations) {
-        return new SourceReference(identifier, ImmutableList.copyOf(locations));
+    public static SourceReference of(final SourceIdentifier identifier, final Collection<URI> locations) {
+        return new SourceReference(identifier, List.copyOf(locations));
     }
 
-    public ImmutableList<URL> getLocations() {
+    public List<URI> getLocations() {
         return locations;
     }
 
